--- a/index.html
+++ b/index.html
@@ -1,10 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.min.css"
+        rel="stylesheet">
+    <link rel="stylesheet" href="./css/styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700&display=swap"
+        rel="stylesheet">
     <title>Document</title>
-    <link rel="stylesheet" href="./cssss/styles.css">
+    <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
     <section class="three">
@@ -12,15 +21,15 @@
             <h2 class="about">About Us</h2>
             <ul>
                 <li>
-                    <p>Welcome to our premium watch collection, where luxury and style meet functionality and precision.
+                    <p class="pwelcome">Welcome to our premium watch collection, where luxury and style meet functionality and precision.
                         Our selection of
                         timepieces embodies the very best in Swiss craftsmanship and engineering, ensuring that you'll
                         always have a reliable
                         and stylish accessory on your wrist.</p>
                 </li>
                 <li>
-                    <p>At our premium watch collection, we believe that a watch is more than just a timekeeping device -
-                        it's a statement piece↩
+                    <p class="pwelcome">At our premium watch collection, we believe that a watch is more than just a timekeeping device -
+                        it's a statement piece
                         that reflects your personality and style. So why settle for anything less than the best?</p>
                 </li>
             </ul>
@@ -40,7 +49,6 @@
                     <img src="/mobi/Rectangle(1x)mobi.png" width="335" height="446" alt="cloc">
                 </picture>
             </div>
-        
     </section>
 </body>
 </html>
