--- a/index.html
+++ b/index.html
@@ -17,10 +17,12 @@
 </head>
 <body>
     <section class="three">
+        <div class="conteiner">
         <div class="us-div">
+            <div class="exere">
             <h2 class="about">About Us</h2>
-            <ul>
-                <li>
+            <ul class="ul-pwel">
+                <li class="list-pwel">
                     <p class="pwelcome">Welcome to our premium watch collection, where luxury and style meet functionality and precision.
                         Our selection of
                         timepieces embodies the very best in Swiss craftsmanship and engineering, ensuring that you'll
@@ -33,21 +35,22 @@
                         that reflects your personality and style. So why settle for anything less than the best?</p>
                 </li>
             </ul>
+            </div>
             <button class="catalog">View catalog</button> 
         </div>
-                <div>
+                <div class="foto-cloc">
                 <picture>
                     <source
-                        srcset="../proekt-16/mobi/Rectangle(1x)mobi.png 1x, ../proekt-16/mobi/Rectangle(2x)mobi.png 2x"
+                        srcset="/proekt-16/mobi/Rectangle(1x)mobi.png 1x, ../proekt-16/mobi/Rectangle(2x)mobi.png 2x"
                         media="(min-width: 320px) and (max-width: 375px)" />
                     <source
-                        srcset="../proekt-16/tab/Rectangle(1)x-tab.png 1x, ../proekt-16/tab/Rectangle(2)x-tab.png 2x"
-                        media="(min-width: 7680px)" />
+                        srcset="/proekt-16/tab/Rectangle(1)x-tab.png 1x, ../proekt-16/tab/Rectangle(2)x-tab.png 2x"
+                        media="(max-width: 768px)"
                     <source
-                        srcset="../proekt-16/desc/Rectangle(1)x-desc.png 1x, ../proekt-16/desc/Rectangle(2)x-desc.png 2x"
-                        media="(min-width: 1280px)" />
-                    <img src="/mobi/Rectangle(1x)mobi.png" width="335" height="446" alt="cloc">
+                        srcset="/proekt-16/desc/Rectangle(1)x-desc.png 1x, ../proekt-16/desc/Rectangle(2)x-desc.png 2x"
+                        media="(max-width: 1280px)" />
                 </picture>
+            </div>
             </div>
     </section>
 </body>
