--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </head>
 <body>
     <section class="three" >
-        <div class="conteiner" di="about-us">
+        <div class="conteiner" di="#about-us">
         <div class="us-div">
             <div class="exere">
             <h2 class="about">About Us</h2>
@@ -37,7 +37,7 @@
             </ul>
             </div>
         <a  class="catalog vcnop" 
-                 href="#catalog">View catalog</a>
+        style="vertical-align:middle"  href="#catalog"><span>View catalog</span></a>
         </div>
                 <div class="foto-cloc">
                     <picture>
@@ -47,7 +47,7 @@
                     media="(min-width: 376px) and (max-width: 768px)"/>
                 <source srcset="./mobi/Rectangle(1x)mobi.png 1x, ./mobi/Rectangle(2x)mobi.png 2x"
                     media="(min-width: 320px) and (max-width: 375px)"/>
-                    <img src="./desc/Rectangle(1)x-desc.png" width="530"  alt="cloc">
+                    <img src="./desc/Rectangle(1)x-desc.png"  alt="cloc">
                </picture>
             
             </div>
