--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </head>
 <body>
     <section class="three" >
-        <div class="conteiner" di="#about-us">
+        <div class="conteiner">
         <div class="us-div">
             <div class="exere">
             <h2 class="about">About Us</h2>
@@ -47,9 +47,8 @@
                     media="(min-width: 376px) and (max-width: 768px)"/>
                 <source srcset="./mobi/Rectangle(1x)mobi.png 1x, ./mobi/Rectangle(2x)mobi.png 2x"
                     media="(min-width: 320px) and (max-width: 375px)"/>
-                    <img src="./desc/Rectangle(1)x-desc.png"  alt="cloc">
+                    <img class="cloc-cloc" src="./mobi/Rectangle(1x)mobi.png"  alt="cloc">
                </picture>
-            
             </div>
             </div>
     </section>
