--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </head>
 <body>
     <section class="three" >
-        <div class="conteiner">
+        <div class="container">
         <div class="us-div">
             <div class="exere">
             <h2 class="about">About Us</h2>
@@ -42,11 +42,11 @@
                 <div class="foto-cloc">
                     <picture>
                 <source srcset="./desc/Rectangle(1)x-desc.png 1x, ./desc/Rectangle(2)x-desc.png 2x"
-                    media="(min-width: 768px) and (max-width: 1280px)"/>
+                    media="(min-width: 1280px)"/>
                 <source srcset="./tab/Rectangle(1)x-tab.png 1x, ./tab/Rectangle(2)x-tab.png 2x"
-                    media="(min-width: 376px) and (max-width: 768px)"/>
+                    media="(min-width: 768px)"/>
                 <source srcset="./mobi/Rectangle(1x)mobi.png 1x, ./mobi/Rectangle(2x)mobi.png 2x"
-                    media="(min-width: 320px) and (max-width: 375px)"/>
+                    media="(min-width: 375px)"/>
                     <img class="cloc-cloc" src="./mobi/Rectangle(1x)mobi.png"  alt="cloc">
                </picture>
             </div>
